src/sass/_base.scss
/* ... */
@-moz-viewport { width: device-width; }
@-ms-viewport { width: device-width; }
@-o-viewport { width: device-width; }
@viewport { width: device-width; }


// Border-box everything
// ----------------------
// (http://paulirish.com/2012/box-sizing-border-box-ftw/)
// Use with caution if app needs to support oldIE (6,7,8)
// Updated inheritence version: http://blog.teamtreehouse.com/box-sizing-secret-simple-css-layouts#comment-50223
html {
    box-sizing: border-box;
}
*,
*:before,
*:after {
    box-sizing: inherit;
}

h1 { }
h2 { font-size: 1em; }
h3 { }
h4 { }
h5 { }
h6 { font-size: 1.2em; }

button {
  text-transform: uppercase;
  font-weight: 100!important;
  &.muted {
    color: gray!important;
    cursor: default;
    text-transform: uppercase;
    font-size: 17px;
  }
}
// Body reset
// -----------

body {
    font-size: $baseFontSize;
    font-family: $baseFontFamily;
    line-height: $baseLineHeight;
    color: $textColor;
    background:url('../images/bg1.png')no-repeat fixed center center;
    background-size: cover;
}

path {
  cursor: pointer;
}

.top-nav {
  background-color: $dark-blue;
  color: white;
}
#side-navs-fixed {
      margin-right: 10px;
}
.modal-body {
  letter-spacing: 0px;
  padding: 0 1em;
}
#content-main {
  padding: 50px;
}
main {
  background-color: white;
  padding: 2em;
  padding-top:0;
  margin-left: 1%;
  border-top: 10px solid $dark-blue;
  position:relative;
  img {

  }
  div:first-of-type {
    padding-left:0;
    padding-right:0;
  }
  p {
    color:#061922;
    font-size:16px;
    line-height:22px;
    margin-bottom:0px;
  }
  figure {
    position:relative;
    margin:0!important;
    img {
      padding:0px 0em;

    }
    figcaption {
      position: absolute;
      bottom: 0px;
      background-color: $dark-blue;
      width: 80%;
      left: 10%;
      font-size: 12px;
      text-align: center;
      color: white;
    }
  }
  &.patient-1 {
    border-top: 10px solid $pink;
    padding: 60px;
    min-width: 662px;
    // max-width: 606px;
    p {
      padding: 0em 0em 1em 0;
      text-transform: initial;
      margin:0;
      &:last-of-type {
        padding-bottom:0;
      }
    }
    h2 {
      // margin-left: 1.4em;
      // padding-top: 1em;
      // padding-bottom: 1em;
    }
    figcaption {
      background-color: $pink;
    }
  }
  &.patient-2 {
    border-top: 10px solid $purple;
    padding-left: 0!important;
    padding-right: 0!important;
    width: 100%;
    min-width: 606px;
    // max-width: 606px;
    margin-bottom:3em;
    p {
      padding: 2em 1em 2em 2em;
    }
    h2 {
      // margin-left: 1.4em;
    }
    figcaption {
      background-color: $purple;
    }
  }
  &.patient-3 {
    border-top: 10px solid #2ca775;
    padding-left: 0!important;
    padding-right: 0!important;
    width: 100%;
    min-width: 606px;
    max-width: 606px;
    margin-bottom:3em;
    p {
      padding: 2em 1em 2em 2em;
    }
    h2 {
      margin-left: 1.4em;
    }
    figcaption {
      background-color: $purple;
    }
  }
}
.p-2-steps ul li img {
  margin-right:20px;
}
.magnify {
      padding: .5em;
          width: 100%;
}
.no-top-pad {
  padding-top:0;
}
.no-other-pad {
  padding: 0 0 0 2em!important;
}
figure {
  text-align:center;
  margin-bottom:1em;
  img:not(.one-hun) {
    // width:90%;
    padding-top:1em;
  }
}
.side-nav img:not(.hotspot) {
  right: 0px;
position: relative;
border-left: 3px solid white;
}
#pick-size {
//   width: 100%;
//   margin-top: -14em;
// margin-bottom: -14em;
}

.modal.in .modal-dialog {
    transform: translate(4vw, 10em);

}
.svg-test {
  padding:0!important;
  p {
    padding:60px!important;
  }
  .specs {
    margin: 0!important;
    padding: 60px;
  }
}
@media only screen and (min-width:1200px) and (max-width: 1400px) {
.modal.in .modal-dialog {
    transform: translate(7vw, 10em);
  }
}
@media only screen and (min-width:1100px) and (max-width: 1199px) {
.modal.in .modal-dialog {
    transform: translate(9vw, 10em);
  }
}
@media only screen and (min-width:1000px) and (max-width: 1099px) {
.modal.in .modal-dialog {
    transform: translate(12vw, 10em);
  }
}
.modal-body {
  border-top: 10px solid $pink;
  text-align:left;
  padding:60px!important;
}
.patients-container div:nth-child(5) {
  margin-bottom: 6em;
}

blockquote {
  color:#061922;
  font-size:42px;
  line-height: 48px;
  &.start-quote {
    color: white;
  }
}
.top-quote blockquote {
    margin: 0em 0em 2em 1em;
        font-weight: bold;
            max-width:600px;

}
.check-mark {
  text-align: right;
position: absolute;
top: 0px;
right: 35px;
font-size: 15px;
}
.svg-text2 {
  background-color: rgba(221, 48, 123, 0.8);
  font-weight: bold;
  position: absolute;
  color: white;
  padding: 1.4em;
  width: 100%;
top: 13px;
  margin: .3em;
  line-height: 34px;
  z-index: 999;
  left: 49px;
  top: 21px;

      &.full {
        width:98%;
        top:0;
        padding:1em;
        p {
          font-weight: 100;
          font-size: 20px;
          padding: 0em 2em 0em 2em;
        }
      }
}
.svg-text {
  background-color: rgba(221, 48, 123, 0.8);
  font-weight: bold;
  position: absolute;
  color: white;
  padding: 2em;
  width: 100%;
top: 13px;
  margin: .3em;
  line-height: 34px;
      z-index: 999;
  &.full {
    width:98%;
    top:0;
    padding:1em;
    p {
      font-weight: 100;
      font-size: 20px;
      padding: 0em 2em 0em 2em;
    }
  }
}
.specs {
  list-style:none;
  margin-bottom: 35px;
      margin-left: 4em;
  li {
    font-size: 15px;
  }
}

.size-1,.size-2,.size-3,.size-4 {
  cursor: pointer;
}
.size-1-active,.size-2-active,.size-3-active,.size-4-active {
  display: none;
}
.start-quote {
    margin-top: 3em;
    margin-bottom:2em;
    color: white;
}

#region-main .pick-overlay:before {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    background-color: $dark-blue;
    opacity: .9;
}
&.patient1 {
  outline: rgba(221,48,123,.7) solid 15px;
  outline-offset: -15px;
}
/* ... */

